fix xfs stuff, switch to no mount type for TS, set disk size

--- a/redpanda.yaml
+++ b/redpanda.yaml
@@ -96,8 +96,10 @@ statefulset:
 storage:
   persistentVolume:
     enabled: true
+    size: 350Gi
     storageClass: csi-driver-lvm-striped-xfs
   tiered:
+    mountType: none
     config:
       cloud_storage_enabled: true
       cloud_storage_api_endpoint: storage.googleapis.com
